--- a/finalprojectpage2.html
+++ b/finalprojectpage2.html
@@ -122,7 +122,7 @@ rel="stylesheet"> <!-- Connects Bootstrap -->
     <div class="footer"> <!-- Inside this div class contains the location, hours, and contact info for the small business -->
      <footer>
      <h6>Location</h6> <!-- The href tag will have a hyper link leading to the location of the business on Google Maps -->
-     <a href="https://maps.app.goo.gl/r8sS25buRgApZ1K6A"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
+     <a href="https://maps.app.goo.gl/r8sS25buRgApZ1K6A"><h6>476 Timothy St. Newmarket, ON L3Y 1P8</h6></a>
       <h6>Hours</h6>
       <h6>Monday (CLOSED)</h6>
       <h6>Tuesday (CLOSED)</h6>
