--- a/finalprojectpage3.html
+++ b/finalprojectpage3.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="finalprojectpage3.css" rel="stylesheet" type"text/css"/>
+<link href="finalprojectpage3.css" rel="stylesheet" type"text/css"/> <!-- Connects CSS to HTML-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<title>La Feliz | Self Protrait Studio</title>
+rel="stylesheet"> <!-- Connects Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> <!-- Connects Bootstrap -->
+<title>La Feliz | Self Protrait Studio</title> <!-- Adds a title to the tab -->
 </head>
 <body>
   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo" width="300" height="100"> <!-- Image of logo -->
@@ -72,7 +72,7 @@ If any spills or damage occur, a cleaning fee may apply, so please handle food p
   <div class="footer"> <!-- Inside this div class contains the location, hours, and contact info for the small business -->
      <footer>
      <h6>Location</h6> <!-- The href tag will have a hyper link leading to the location of the business on Google Maps -->
-     <a href="https://maps.app.goo.gl/r8sS25buRgApZ1K6A"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
+     <a href="https://maps.app.goo.gl/r8sS25buRgApZ1K6A"><h6>476 Timothy St. Newmarket, ON L3Y 1P8</h6></a>
       <h6>Hours</h6>
       <h6>Monday (CLOSED)</h6>
       <h6>Tuesday (CLOSED)</h6>
